Swagger con las correcciones de los endpoint
