# src/routes/tag.route.js
@@ -9,28 +9,28 @@ const tagController = require('../controllers/tags.controller');
 const router = Router();
 
 
-router.get("/tags",
+router.get("/tags", //Bien Tag
     tagController.getTags
+)
+
+router.post("/tag", //Bien en el Tag
+    schemaValidator(Tag),
+    tagController.createTag
+)
+
+router.put("/tag/:id",//Bien en el Tag
+    genericMiddleware.validateId(Tag),
+    tagController.updateTag
+)
+
+router.delete("/tag/:id",//Bien Tag
+    genericMiddleware.validateId(Tag),
+    tagController.deleteById
 )
 
 router.get("/tag/:id",
     genericMiddleware.validateId(Tag),
     tagController.getTagById
-)
-
-router.post("/tag",
-    schemaValidator(Tag),
-    tagController.createTag
-)
-
-router.put("/tag/:id",
-    genericMiddleware.validateId(Tag),
-    tagController.updateTag
-)
-
-router.delete("/tag/:id",
-    genericMiddleware.validateId(Tag),
-    tagController.deleteById
 )
 
 router.get("/tag/:id/posts",
